--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -42,5 +42,5 @@
   "devDependencies": {
     "gh-pages": "^6.2.0"
   },
-  "homepage": "https://tylerjac.github.io/personal-portfolio"
+  "homepage": "https://tylerjac.github.io/personal-portfolio/"
 }
